--- a/lib/gw2_router_web/live/home_live.html.heex
+++ b/lib/gw2_router_web/live/home_live.html.heex
@@ -7,7 +7,7 @@
   </div>
   <.form phx-submit="route_request" class=" mx-auto px-4">
     <div class="flex gap-2">
-      <div class="w-4/5">
+      <div class="w-3/5">
         <.input
           class="flex-1"
           id="wp_text_input"
@@ -18,6 +18,17 @@
           name="wp_text"
           value={@wp_text}
           label="Input"
+        />
+      </div>
+      <div class="w-1/5">
+        <.input
+          class="flex-1"
+          phx-change="guild_buff_changed"
+          type="select"
+          name="guild_buff"
+          label="Guild Buff"
+          options={["0%", "5%", "10%", "15%"]}
+          value="0"
         />
       </div>
       <div class="w-1/5">
