add basic feedback email.

--- a/lib/gw2_router_web/live/home_live.html.heex
+++ b/lib/gw2_router_web/live/home_live.html.heex
@@ -98,3 +98,9 @@
   </.form>
 </div>
 <GoldValue.render copper_amount={@cost} />
+
+<div class="text-center p-10">
+  <a href="mailto:gw2router@divisibleprimes.com">
+    <h5 class="mb-2 text-xl font-medium leading-tight">Feedback Email</h5>
+  </a>
+</div>
