--- a/lib/gw2_router_web/live/admin_live.html.heex
+++ b/lib/gw2_router_web/live/admin_live.html.heex
@@ -1,5 +1,7 @@
 <button
   phx-click="refresh_api_data"
+  phx-throttle="5000"
+  phx-blur
   class="px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600"
 >
   Refresh API data
